syntax="proto3";
option go_package="github.com/tranvinhhien/learngrpc/pb";
import "memory_message.proto";
import "keyboard_message.proto";
import "processor_message.proto";
import "screen_message.proto";
import "storagre_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop{
    string id=1;
    string brand=2;
    string name=3;
    CPU cpu=4;
    Memory ram=5;
    repeated GPU gpu=6;
    repeated Storage storegres=7;
    Screen screen=8;
    Keyboard keyboard=9;
    double weight =10;
    // oneof weight{
    //     double weight_kg=10;
    //     double weight_lb=11;
    // }
    double price_usd=11;
    uint32 release_year=12;
    google.protobuf.Timestamp update_at=13;
}
